contact and work details page

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                   </ul>
 
                 <!-- Call-to-Action Button -->
-                <a href="#"
+                <a href="contact.html"
                     class="bg-[#EDD6B6] text-black text-[12px] font-semibold rounded-sm px-4 py-2  hover:bg-[#FBD9B9]">
                     LET'S TALK
                 </a>
