--- a/contact.html
+++ b/contact.html
@@ -39,75 +39,48 @@
   </div>
 
 
-  <section class="container mx-auto p-6 mb-16">
-    <div class="text-center pt-16 my-16">
-      <h1 class="text-8xl font-font-raleway text-[#DAC5A7]">Blog</h1>
-      <h3 class="text-xl font-light text-[#DAC5A7] mt-4">
-        Get the latest insights and tips on web design, <br>
-        development, and SEO in our blog.
-      </h3>
+  <div class="flex justify-between mt-48 container mx-auto">
+    <!-- left side start -->
+    <div class="w-4/12">
+        <img class="" src="https://framerusercontent.com/images/sitQqXXWe18lNYFUMPSXSHcM3A.png?scale-down-to=1024" alt="">
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Card 1 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">How to Build a Stunning Website with Framer</h2>
-        <p class="text-[#EDD6B6]  mb-4">Learn how to create an impressive website using Framer with our step-by-step
-          guide.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 2 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">10 website elements for maximum user engagement</h2>
-        <p class="text-[#EDD6B6]  mb-4">10 website elements to engage users, from navigation essentials to compelling
-          visuals.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 3 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">The importance of content in driving website traffic</h2>
-        <p class="text-[#EDD6B6]  mb-4">Quality content is key. Learn how to create valuable, SEO-optimized content.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline border p-2">READ MORE</a>
-      </div>
-      <!-- Card 4 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
-        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
-        </p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 5 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">Why responsive web design is critical for your business</h2>
-        <p class="text-[#EDD6B6]  mb-4">Responsive design ensures your site looks great and performs well on all
-          devices.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 6 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">How to write content that ranks on Google</h2>
-        <p class="text-[#EDD6B6]  mb-4">Writing content that ranks high on Google with smart keywords and structure.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
+    <!-- left side end -->
+
+    <!-- right side start -->
+    <div class=" w-3/5   ">
+        <div class="border border-zinc-700  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl ">
+            <form action="" method="post" class="flex flex-col justify-start p-8 ">
+                <p class="text-md p-2" >CONTACT</p>
+                <p class="text-4xl font-thin mb-10">Let's get in touch</p>
+                <input type="text"  placeholder="Name" class="p-3 my-2 bg-[#EDD6B6] bg-stone-800  rounded-md " >
+                <input type="email" placeholder="Email"  class="p-3 my-2 bg-[#EDD6B6] bg-stone-800  rounded-md " >
+                <textarea name="message" id="" placeholder="message" rows="4" class="p-3 my-2 bg-[#EDD6B6] bg-stone-800  rounded-md" ></textarea>
+                <button type="submit" class="p-2 bgb my-2 bg-[#EDD6B6] text-gray-900 font-semibold rounded-md  ">Send Message</button>
+            </form>
+        </div>
+        <div class="grid grid-cols-3 gap-4 my-4">
+            <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                <a href="#"><i class="fab fa-facebook p-2"></i>Facebook</a>
+               </div>
+               <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                <a href="#"><i class="fab fa-twitter p-2"></i>Twitter</a>
+               </div>
+               <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                <a href="#"><i class="fab fa-instagram p-2"></i>Instagram</a>
+               </div>
+               <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                   <a href="#"><i class="fab fa-linkedin p-2"></i>LinkedIn</a>
+               </div>
+               <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                   <a href="#"><i class="fab fa-github p-2"></i>GitHub</a>
+               </div>
+               <div class="border border-zinc-600 text-2xl text-[#EDD6B6]  rounded-md bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl p-1">
+                   <a href="#"><i class="fab fa-youtube p-2"></i>Youtube</a>
+               </div>
+        </div>
+
     </div>
-  </section>
+</div>
 
   <!-- Carosul starts  -->
   <div class=" bg-white/10 backdrop-blur-md py-2">
