--- a/work.html
+++ b/work.html
@@ -24,14 +24,14 @@
 
         <!-- Navigation Links -->
         <ul class="flex space-x-10 text-sm font-medium">
-            <li><a href="/service.html" class="hover:text-gray-400 hover:underline">Services</a></li>
-            <li><a href="/work.html" class="hover:text-gray-400 hover:underline">Work</a></li>
-            <li><a href="/about.html" class="hover:text-gray-400 hover:underline">About</a></li>
-            <li><a href="/blog.html" class="hover:text-gray-400 hover:underline">Blog</a></li>
-          </ul>
+          <li><a href="/service.html" class="hover:text-gray-400 hover:underline">Services</a></li>
+          <li><a href="/work.html" class="hover:text-gray-400 hover:underline">Work</a></li>
+          <li><a href="/about.html" class="hover:text-gray-400 hover:underline">About</a></li>
+          <li><a href="/blog.html" class="hover:text-gray-400 hover:underline">Blog</a></li>
+        </ul>
 
         <!-- Call-to-Action Button -->
-        <a href="#" class="bg-[#EDD6B6] text-black text-[12px] font-semibold rounded-sm px-4 py-2  hover:bg-[#FBD9B9]">
+        <a href="contact.html" class="bg-[#EDD6B6] text-black text-[12px] font-semibold rounded-sm px-4 py-2  hover:bg-[#FBD9B9]">
           LET'S TALK
         </a>
       </div>
@@ -40,18 +40,18 @@
 
 
 
-  
+
   <!-- selected work  -->
   <section class="container mx-auto my-24">
     <div class="text-center pt-16 my-16">
-        <h1 class="text-8xl font-font-raleway text-[#DAC5A7]">Work</h1>
-        <h3 class="text-xl font-light text-[#DAC5A7] mt-4">
-            My latest web design projects and see how we can <br>
-            help bring your ideas to life.
-        </h3>
-      </div>
+      <h1 class="text-8xl font-font-raleway text-[#DAC5A7]">Work</h1>
+      <h3 class="text-xl font-light text-[#DAC5A7] mt-4">
+        My latest web design projects and see how we can <br>
+        help bring your ideas to life.
+      </h3>
+    </div>
     <div class="grid grid-cols-1  md:grid-cols-2  gap-8">
-      <div class="relative  hover:shadow-xl hover:shadow-white group rounded-2xl ">
+      <a href="work-details.html" class="relative  hover:shadow-xl hover:shadow-white group rounded-2xl ">
         <!-- Image -->
         <img class="h-full w-full rounded-2xl" src="img/a.jpg" alt="Image not found">
 
@@ -73,9 +73,9 @@
             <span class="text-lg font-thin">WEB DESIGN</span>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="relative hover:shadow-xl hover:shadow-white rounded-2xl group">
+      <a href="work-details.html" class="relative hover:shadow-xl hover:shadow-white rounded-2xl group">
         <!-- Image -->
         <img class="h-full w-full rounded-2xl" src="img/b.jpg" alt="Image not found">
 
@@ -97,9 +97,9 @@
             <span class="text-lg font-thin">WEB DESIGN</span>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="relative hover:shadow-xl hover:shadow-white group  rounded-2xl">
+      <a href="work-details.html" class="relative hover:shadow-xl hover:shadow-white group  rounded-2xl">
         <!-- Image -->
         <img class="h-full w-full rounded-2xl" src="img/c.jpg" alt="Image not found">
 
@@ -121,9 +121,9 @@
             <span class="text-lg font-thin">WEB DESIGN</span>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="relative hover:shadow-xl hover:shadow-white group rounded-2xl ">
+      <a href="work-details.html" class="relative hover:shadow-xl hover:shadow-white group rounded-2xl ">
         <!-- Image -->
         <img class="h-full w-full  rounded-2xl" src="img/h.jpg" alt="Image not found">
 
@@ -145,7 +145,7 @@
             <span class="text-lg font-thin">WEB DESIGN</span>
           </div>
         </div>
-      </div>
+      </a>
     </div>
   </section>
 
