--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
 
         <!-- Call-to-Action Button -->
-        <a href="#" class="bg-[#EDD6B6] text-black text-[12px] font-semibold rounded-sm px-4 py-2  hover:bg-[#FBD9B9]">
+        <a href="contact.html" class="bg-[#EDD6B6] text-black text-[12px] font-semibold rounded-sm px-4 py-2  hover:bg-[#FBD9B9]">
           LET'S TALK
         </a>
       </div>
