--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
 
         <!-- Navigation Links -->
         <ul class="flex space-x-10 text-sm font-medium">
-          <li><a href="/service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
-          <li><a href="/work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
-          <li><a href="/about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
-          <li><a href="/blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
+          <li><a href="service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
+          <li><a href="work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
+          <li><a href="about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
+          <li><a href="blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
         </ul>
 
         <!-- Call-to-Action Button -->
@@ -82,14 +82,19 @@
     </div>
 </div>
 
+
+
+  <!-- footer section satrt -->
+
+
   <!-- Carosul starts  -->
-  <div class=" bg-white/10 backdrop-blur-md py-2">
+  <div class=" bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl py-2 border border-[#EDD6B6] border-opacity-25">
     <!-- slide scroll start -->
     <section>
       <div class="overflow-hidden w-full ">
         <div class="flex whitespace-nowrap">
           <marquee>
-            <span class="text-xl  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
+            <span class="text-md opacity-80 font-extralight  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
@@ -114,7 +119,7 @@
 
 
   <!-- contact us section start -->
-  <section class="">
+  <section>
     <div class="container max-w-7xl mx-auto mt-20 ">
       <div class="">
         <h1 class="text-xl  font-extralight text-center mb-6">Project in mind?</h1>
@@ -125,7 +130,7 @@
           <span class="text-xl">services to help your business stand out.</span>
         </div>
         <div class="flex justify-center">
-          <a class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
+          <a class="border bg-[#edd6b6] rounded-sm px-3 py-1 mt-6 text-black ">
             <span class="">GET IN TOUCH</span>
             <i class="fa-solid fa-arrow-right-long m-2"></i>
           </a>
@@ -135,7 +140,7 @@
   </section>
   <!-- contact us section end -->
 
-  <!-- footer section start -->
+  <!-- footer  start -->
   <footer class="text-[#edd6b6] py-10  mt-8">
     <div class="container max-w-7xl mx-auto px-4">
       <div class="flex flex-wrap justify-between items-center">
@@ -146,16 +151,16 @@
 
         <!-- Social Media Icons -->
         <div class="flex space-x-6 mb-4 md:mb-0">
-          <a href="#" aria-label="Instagram" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Instagram" class="hover:text-gray-400">
             <i class="fab fa-instagram text-3xl"></i>
           </a>
-          <a href="#" aria-label="Twitter" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Twitter" class="hover:text-gray-400">
             <i class="fab fa-twitter text-3xl"></i>
           </a>
-          <a href="#" aria-label="Dribbble" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Dribbble" class="hover:text-gray-400">
             <i class="fab fa-dribbble text-3xl"></i>
           </a>
-          <a href="#" aria-label="Behance" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Behance" class="hover:text-gray-400">
             <i class="fab fa-behance text-3xl"></i>
           </a>
         </div>
@@ -166,29 +171,29 @@
         <div>
           <h3 class="text-lg font-semibold mb-2">Pages</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Home</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Services</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">About</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Pricing</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Contact</a></li>
+            <li><a href="#" class="hover:text-gray-400">Home</a></li>
+            <li><a href="#" class="hover:text-gray-400">Services</a></li>
+            <li><a href="#" class="hover:text-gray-400">About</a></li>
+            <li><a href="pricing.html" class="hover:text-gray-400">Pricing</a></li>
+            <li><a href="#" class="hover:text-gray-400">Contact</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-2">More Templates</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">CMS</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Work</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Work Single</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Blog</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Blog Single</a></li>
+            <li><a href="#" class="hover:text-gray-400">CMS</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work Single</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog Single</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-2">Utility Pages</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Styleguide</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">404 Error Page</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Licensing</a></li>
+            <li><a href="#" class="hover:text-gray-400">Styleguide</a></li>
+            <li><a href="#" class="hover:text-gray-400">404 Error Page</a></li>
+            <li><a href="#" class="hover:text-gray-400">Licensing</a></li>
           </ul>
         </div>
       </div>
@@ -198,9 +203,10 @@
       © 2024 SHARIFUL. All rights reserved.
     </div>
   </footer>
-  <!-- footer section end -->
+  <!-- footer  end -->
 
-
+  
+<!-- footer section satrt -->
 
 </body>
 
