--- a/work.html
+++ b/work.html
@@ -20,14 +20,14 @@
       class="bg-black w-1/2 z-9  text-[#EDD6B6] py-3 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl shadow-lg">
       <div class="container mx-auto flex items-center justify-between px-6">
         <!-- Logo -->
-        <a href="/index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
+        <a href="index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
 
         <!-- Navigation Links -->
         <ul class="flex space-x-10 text-sm font-medium">
-          <li><a href="/service.html" class="hover:text-gray-400 hover:underline">Services</a></li>
-          <li><a href="/work.html" class="hover:text-gray-400 hover:underline">Work</a></li>
-          <li><a href="/about.html" class="hover:text-gray-400 hover:underline">About</a></li>
-          <li><a href="/blog.html" class="hover:text-gray-400 hover:underline">Blog</a></li>
+          <li><a href="service.html" class="hover:text-gray-400 hover:underline">Services</a></li>
+          <li><a href="work.html" class="hover:text-gray-400 hover:underline">Work</a></li>
+          <li><a href="about.html" class="hover:text-gray-400 hover:underline">About</a></li>
+          <li><a href="blog.html" class="hover:text-gray-400 hover:underline">Blog</a></li>
         </ul>
 
         <!-- Call-to-Action Button -->
@@ -150,14 +150,17 @@
   </section>
 
 
+<!-- footer section satrt -->
+
+
   <!-- Carosul starts  -->
-  <div class=" bg-white/10 backdrop-blur-md py-2">
+  <div class=" bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl py-2 border border-[#EDD6B6] border-opacity-25">
     <!-- slide scroll start -->
     <section>
       <div class="overflow-hidden w-full ">
         <div class="flex whitespace-nowrap">
           <marquee>
-            <span class="text-xl  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
+            <span class="text-md opacity-80 font-extralight  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
@@ -182,7 +185,7 @@
 
 
   <!-- contact us section start -->
-  <section class="">
+  <section>
     <div class="container max-w-7xl mx-auto mt-20 ">
       <div class="">
         <h1 class="text-xl  font-extralight text-center mb-6">Project in mind?</h1>
@@ -193,7 +196,7 @@
           <span class="text-xl">services to help your business stand out.</span>
         </div>
         <div class="flex justify-center">
-          <a class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
+          <a class="border bg-[#edd6b6] rounded-sm px-3 py-1 mt-6 text-black ">
             <span class="">GET IN TOUCH</span>
             <i class="fa-solid fa-arrow-right-long m-2"></i>
           </a>
@@ -203,7 +206,7 @@
   </section>
   <!-- contact us section end -->
 
-  <!-- footer section start -->
+  <!-- footer  start -->
   <footer class="text-[#edd6b6] py-10  mt-8">
     <div class="container max-w-7xl mx-auto px-4">
       <div class="flex flex-wrap justify-between items-center">
@@ -237,7 +240,7 @@
             <li><a href="#" class="hover:text-gray-400">Home</a></li>
             <li><a href="#" class="hover:text-gray-400">Services</a></li>
             <li><a href="#" class="hover:text-gray-400">About</a></li>
-            <li><a href="#" class="hover:text-gray-400">Pricing</a></li>
+            <li><a href="pricing.html" class="hover:text-gray-400">Pricing</a></li>
             <li><a href="#" class="hover:text-gray-400">Contact</a></li>
           </ul>
         </div>
@@ -266,8 +269,10 @@
       © 2024 SHARIFUL. All rights reserved.
     </div>
   </footer>
-  <!-- footer section end -->
+  <!-- footer  end -->
 
+  
+<!-- footer section satrt -->
 
 
 </body>
