--- a/blog.html
+++ b/blog.html
@@ -20,14 +20,14 @@
       class="bg-black w-1/2 z-9  text-[#EDD6B6] py-3 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl shadow-lg">
       <div class="container mx-auto flex items-center justify-between px-6">
         <!-- Logo -->
-        <a href="/index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
+        <a href="index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
 
         <!-- Navigation Links -->
         <ul class="flex space-x-10 text-sm font-medium">
-          <li><a href="/service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
-          <li><a href="/work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
-          <li><a href="/about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
-          <li><a href="/blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
+          <li><a href="service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
+          <li><a href="work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
+          <li><a href="about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
+          <li><a href="blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
         </ul>
 
         <!-- Call-to-Action Button -->
@@ -38,7 +38,7 @@
     </nav>
   </div>
 
-
+<!-- blog main section start -->
   <section class="container mx-auto p-6 mb-16">
     <div class="text-center pt-16 my-16">
       <h1 class="text-8xl font-font-raleway text-[#DAC5A7]">Blog</h1>
@@ -49,74 +49,133 @@
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <!-- Card 1 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">How to Build a Stunning Website with Framer</h2>
-        <p class="text-[#EDD6B6]  mb-4">Learn how to create an impressive website using Framer with our step-by-step
-          guide.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 2 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">10 website elements for maximum user engagement</h2>
-        <p class="text-[#EDD6B6]  mb-4">10 website elements to engage users, from navigation essentials to compelling
-          visuals.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
-      <!-- Card 3 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
-        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
-        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">The importance of content in driving website traffic</h2>
-        <p class="text-[#EDD6B6]  mb-4">Quality content is key. Learn how to create valuable, SEO-optimized content.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline border p-2">READ MORE</a>
-      </div>
-      <!-- Card 4 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+      <a  href="blog-details.html"
+        class="bg-gray-8 relative pb-16 00 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
         <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
         <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
         <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
         <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
         </p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
+        <div href="blog-details.html" class=" absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 1 close -->
+      <!-- Card 2 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 2 close -->
+      <!-- Card 3 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 3 close -->
+      <!-- Card 4 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 4 close -->
       <!-- Card 5 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
         <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
         <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">Why responsive web design is critical for your business</h2>
-        <p class="text-[#EDD6B6]  mb-4">Responsive design ensures your site looks great and performs well on all
-          devices.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 5 close -->
       <!-- Card 6 -->
-      <div
-        class="bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
         <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
         <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
-        <h2 class="text-lg font-semibold mb-2">How to write content that ranks on Google</h2>
-        <p class="text-[#EDD6B6]  mb-4">Writing content that ranks high on Google with smart keywords and structure.</p>
-        <a href="#" class="text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</a>
-      </div>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 6 close -->
+      <!-- Card 7 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 7 close -->
+      <!-- Card 8 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 8 close -->
+      <!-- Card 9 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 9 close -->
+      <!-- Card 10 -->
+      <a  href="blog-details.html"
+        class=" relative pb-16 bg-gray-800 py-4 px-8 border border-[#34312C] bg-stone-800/50 hover:bg-stone-700/50 backdrop-blur-xl p-6 rounded-lg shadow-lg">
+        <img src="assest/image/b.jpg" alt="Thumbnail" class="rounded-md mb-4">
+        <p class="text-sm text-[#EDD6B6]  mb-2">June 28, 2024</p>
+        <h2 class="text-lg font-semibold mb-2">10 common web development mistakes to avoid</h2>
+        <p class="text-[#EDD6B6]  mb-4">Common web development mistakes and how to avoid them for better functionality.
+        </p>
+        <div href="blog-details.html" class="absolute text-sm text-[#EDD6B6] p-2 border hover:underline">READ MORE</div>
+      </a>
+      <!-- Card 10 close -->
     </div>
   </section>
 
+<!-- blog main section end -->
+
+
+  
+<!-- footer section satrt -->
+
+
   <!-- Carosul starts  -->
-  <div class=" bg-white/10 backdrop-blur-md py-2">
+  <div class=" bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl py-2 border border-[#EDD6B6] border-opacity-25">
     <!-- slide scroll start -->
     <section>
       <div class="overflow-hidden w-full ">
         <div class="flex whitespace-nowrap">
           <marquee>
-            <span class="text-xl  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
+            <span class="text-md opacity-80 font-extralight  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
               TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
@@ -141,7 +200,7 @@
 
 
   <!-- contact us section start -->
-  <section class="">
+  <section>
     <div class="container max-w-7xl mx-auto mt-20 ">
       <div class="">
         <h1 class="text-xl  font-extralight text-center mb-6">Project in mind?</h1>
@@ -152,7 +211,7 @@
           <span class="text-xl">services to help your business stand out.</span>
         </div>
         <div class="flex justify-center">
-          <a class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
+          <a class="border bg-[#edd6b6] rounded-sm px-3 py-1 mt-6 text-black ">
             <span class="">GET IN TOUCH</span>
             <i class="fa-solid fa-arrow-right-long m-2"></i>
           </a>
@@ -162,7 +221,7 @@
   </section>
   <!-- contact us section end -->
 
-  <!-- footer section start -->
+  <!-- footer  start -->
   <footer class="text-[#edd6b6] py-10  mt-8">
     <div class="container max-w-7xl mx-auto px-4">
       <div class="flex flex-wrap justify-between items-center">
@@ -173,16 +232,16 @@
 
         <!-- Social Media Icons -->
         <div class="flex space-x-6 mb-4 md:mb-0">
-          <a href="#" aria-label="Instagram" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Instagram" class="hover:text-gray-400">
             <i class="fab fa-instagram text-3xl"></i>
           </a>
-          <a href="#" aria-label="Twitter" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Twitter" class="hover:text-gray-400">
             <i class="fab fa-twitter text-3xl"></i>
           </a>
-          <a href="#" aria-label="Dribbble" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Dribbble" class="hover:text-gray-400">
             <i class="fab fa-dribbble text-3xl"></i>
           </a>
-          <a href="#" aria-label="Behance" class="hover:text-[#EDD6B6] ">
+          <a href="#" aria-label="Behance" class="hover:text-gray-400">
             <i class="fab fa-behance text-3xl"></i>
           </a>
         </div>
@@ -193,29 +252,29 @@
         <div>
           <h3 class="text-lg font-semibold mb-2">Pages</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Home</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Services</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">About</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Pricing</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Contact</a></li>
+            <li><a href="#" class="hover:text-gray-400">Home</a></li>
+            <li><a href="#" class="hover:text-gray-400">Services</a></li>
+            <li><a href="#" class="hover:text-gray-400">About</a></li>
+            <li><a href="pricing.html" class="hover:text-gray-400">Pricing</a></li>
+            <li><a href="#" class="hover:text-gray-400">Contact</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-2">More Templates</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">CMS</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Work</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Work Single</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Blog</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Blog Single</a></li>
+            <li><a href="#" class="hover:text-gray-400">CMS</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work Single</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog Single</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-2">Utility Pages</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Styleguide</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">404 Error Page</a></li>
-            <li><a href="#" class="hover:text-[#EDD6B6] ">Licensing</a></li>
+            <li><a href="#" class="hover:text-gray-400">Styleguide</a></li>
+            <li><a href="#" class="hover:text-gray-400">404 Error Page</a></li>
+            <li><a href="#" class="hover:text-gray-400">Licensing</a></li>
           </ul>
         </div>
       </div>
@@ -225,8 +284,10 @@
       © 2024 SHARIFUL. All rights reserved.
     </div>
   </footer>
-  <!-- footer section end -->
+  <!-- footer  end -->
 
+  
+<!-- footer section satrt -->
 
 
 </body>
