--- a/work-details.html
+++ b/work-details.html
@@ -20,14 +20,14 @@
             class="bg-black w-1/2 z-9  text-[#EDD6B6] py-3 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl shadow-lg">
             <div class="container mx-auto flex items-center justify-between px-6">
                 <!-- Logo -->
-                <a href="/index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
+                <a href="index.html" class="text-2xl  text-[#EDD6B6]">arik.</a>
 
                 <!-- Navigation Links -->
                 <ul class="flex space-x-10 text-sm font-medium">
-                    <li><a href="/service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
-                    <li><a href="/work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
-                    <li><a href="/about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
-                    <li><a href="/blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
+                    <li><a href="service.html" class="hover:text-[#EDD6B6]  hover:underline">Services</a></li>
+                    <li><a href="work.html" class="hover:text-[#EDD6B6]  hover:underline">Work</a></li>
+                    <li><a href="about.html" class="hover:text-[#EDD6B6]  hover:underline">About</a></li>
+                    <li><a href="blog.html" class="hover:text-[#EDD6B6]  hover:underline">Blog</a></li>
                 </ul>
 
                 <!-- Call-to-Action Button -->
@@ -125,125 +125,131 @@
             </div>
     </section>
 
-    <!-- Carosul starts  -->
-    <div class=" bg-white/10 backdrop-blur-md py-2">
-        <!-- slide scroll start -->
-        <section>
-            <div class="overflow-hidden w-full ">
-                <div class="flex whitespace-nowrap">
-                    <marquee>
-                        <span class="text-xl  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
-                            TALK.....+++.....LET'S TALK.....+++.....LET'S TALK</span>
-                    </marquee>
-                </div>
-            </div>
+
+    
+<!-- footer section satrt -->
 
 
-        </section>
-        <!-- slide scroll end -->
-    </div>
-    <!-- Carosul ends  -->
-
-
-    <!-- contact us section start -->
-    <section class="">
-        <div class="container max-w-7xl mx-auto mt-20 ">
-            <div class="">
-                <h1 class="text-xl  font-extralight text-center mb-6">Project in mind?</h1>
-                <div class="flex flex-col text-center ">
-                    <span class="text-7xl  font-extralight italic">Let’s make your</span><br>
-                    <span class="text-7xl font-extralight  italic mb-6">Website shine</span>
-                    <span class="text-xl">Premium web design, development, and SEO</span>
-                    <span class="text-xl">services to help your business stand out.</span>
-                </div>
-                <div class="flex justify-center">
-                    <a class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
-                        <span class="">GET IN TOUCH</span>
-                        <i class="fa-solid fa-arrow-right-long m-2"></i>
-                    </a>
-                </div>
-            </div>
+  <!-- Carosul starts  -->
+  <div class=" bg-[#EDD6B6] bg-stone-800/50 backdrop-blur-xl py-2 border border-[#EDD6B6] border-opacity-25">
+    <!-- slide scroll start -->
+    <section>
+      <div class="overflow-hidden w-full ">
+        <div class="flex whitespace-nowrap">
+          <marquee>
+            <span class="text-md opacity-80 font-extralight  font-semibold mx-4 px-6 py-3">+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK+++.....LET'S TALK......+++.....LET'S
+              TALK.....+++.....LET'S TALK.....+++.....LET'S TALK</span>
+          </marquee>
         </div>
+      </div>
+
+
     </section>
-    <!-- contact us section end -->
+    <!-- slide scroll end -->
+  </div>
+  <!-- Carosul ends  -->
 
-    <!-- footer section start -->
-    <footer class="text-[#edd6b6] py-10  mt-8">
-        <div class="container max-w-7xl mx-auto px-4">
-            <div class="flex flex-wrap justify-between items-center">
-                <!-- Logo -->
-                <div class="mb-4 md:mb-0">
-                    <h1 class="text-2xl font-bold">SHARIFUL</h1>
-                </div>
 
-                <!-- Social Media Icons -->
-                <div class="flex space-x-6 mb-4 md:mb-0">
-                    <a href="#" aria-label="Instagram" class="hover:text-[#EDD6B6] ">
-                        <i class="fab fa-instagram text-3xl"></i>
-                    </a>
-                    <a href="#" aria-label="Twitter" class="hover:text-[#EDD6B6] ">
-                        <i class="fab fa-twitter text-3xl"></i>
-                    </a>
-                    <a href="#" aria-label="Dribbble" class="hover:text-[#EDD6B6] ">
-                        <i class="fab fa-dribbble text-3xl"></i>
-                    </a>
-                    <a href="#" aria-label="Behance" class="hover:text-[#EDD6B6] ">
-                        <i class="fab fa-behance text-3xl"></i>
-                    </a>
-                </div>
-            </div>
+  <!-- contact us section start -->
+  <section>
+    <div class="container max-w-7xl mx-auto mt-20 ">
+      <div class="">
+        <h1 class="text-xl  font-extralight text-center mb-6">Project in mind?</h1>
+        <div class="flex flex-col text-center ">
+          <span class="text-7xl  font-extralight italic">Let’s make your</span><br>
+          <span class="text-7xl font-extralight  italic mb-6">Website shine</span>
+          <span class="text-xl">Premium web design, development, and SEO</span>
+          <span class="text-xl">services to help your business stand out.</span>
+        </div>
+        <div class="flex justify-center">
+          <a class="border bg-[#edd6b6] rounded-sm px-3 py-1 mt-6 text-black ">
+            <span class="">GET IN TOUCH</span>
+            <i class="fa-solid fa-arrow-right-long m-2"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- contact us section end -->
 
-            <!-- Navigation Links -->
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
-                <div>
-                    <h3 class="text-lg font-semibold mb-2">Pages</h3>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Home</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Services</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">About</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Pricing</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Contact</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-2">More Templates</h3>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">CMS</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Work</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Work Single</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Blog</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Blog Single</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-2">Utility Pages</h3>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Styleguide</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">404 Error Page</a></li>
-                        <li><a href="#" class="hover:text-[#EDD6B6] ">Licensing</a></li>
-                    </ul>
-                </div>
-            </div>
+  <!-- footer  start -->
+  <footer class="text-[#edd6b6] py-10  mt-8">
+    <div class="container max-w-7xl mx-auto px-4">
+      <div class="flex flex-wrap justify-between items-center">
+        <!-- Logo -->
+        <div class="mb-4 md:mb-0">
+          <h1 class="text-2xl font-bold">SHARIFUL</h1>
         </div>
 
-        <div class="text-center mt-8 text-sm text-white">
-            © 2024 SHARIFUL. All rights reserved.
+        <!-- Social Media Icons -->
+        <div class="flex space-x-6 mb-4 md:mb-0">
+          <a href="#" aria-label="Instagram" class="hover:text-gray-400">
+            <i class="fab fa-instagram text-3xl"></i>
+          </a>
+          <a href="#" aria-label="Twitter" class="hover:text-gray-400">
+            <i class="fab fa-twitter text-3xl"></i>
+          </a>
+          <a href="#" aria-label="Dribbble" class="hover:text-gray-400">
+            <i class="fab fa-dribbble text-3xl"></i>
+          </a>
+          <a href="#" aria-label="Behance" class="hover:text-gray-400">
+            <i class="fab fa-behance text-3xl"></i>
+          </a>
         </div>
-    </footer>
-    <!-- footer section end -->
+      </div>
 
+      <!-- Navigation Links -->
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
+        <div>
+          <h3 class="text-lg font-semibold mb-2">Pages</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="hover:text-gray-400">Home</a></li>
+            <li><a href="#" class="hover:text-gray-400">Services</a></li>
+            <li><a href="#" class="hover:text-gray-400">About</a></li>
+            <li><a href="pricing.html" class="hover:text-gray-400">Pricing</a></li>
+            <li><a href="#" class="hover:text-gray-400">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-lg font-semibold mb-2">More Templates</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="hover:text-gray-400">CMS</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work</a></li>
+            <li><a href="#" class="hover:text-gray-400">Work Single</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog</a></li>
+            <li><a href="#" class="hover:text-gray-400">Blog Single</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-lg font-semibold mb-2">Utility Pages</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="hover:text-gray-400">Styleguide</a></li>
+            <li><a href="#" class="hover:text-gray-400">404 Error Page</a></li>
+            <li><a href="#" class="hover:text-gray-400">Licensing</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
+    <div class="text-center mt-8 text-sm text-white">
+      © 2024 SHARIFUL. All rights reserved.
+    </div>
+  </footer>
+  <!-- footer  end -->
+
+  
+<!-- footer section satrt -->
 
 </body>
 
